WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310671
REGRESSION(
309272@main
): Caused a crash in RenderTreeBuilder::List::updateItemMarker
https://bugs.webkit.org/show_bug.cgi?id=310671
Summary
REGRESSION(309272@main): Caused a crash in RenderTreeBuilder::List::updateIte...
alan
Reported
2026-03-24 15:58:10 PDT
revert
309272@main
and
309466@main
Attachments
Patch
(74.09 KB, patch)
2026-03-24 15:59 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(74.18 KB, patch)
2026-03-24 19:44 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-03-24 15:59:25 PDT
Created
attachment 478782
[details]
Patch
alan
Comment 2
2026-03-24 19:44:10 PDT
Created
attachment 478784
[details]
[fast-cq]Patch
EWS
Comment 3
2026-03-25 04:36:58 PDT
Committed
309904@main
(88c9d25fce33): <
https://commits.webkit.org/309904@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 478784
[details]
.
Radar WebKit Bug Importer
Comment 4
2026-03-25 04:37:13 PDT
<
rdar://problem/173315889
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug