REGRESSION(309272@main): Caused a crash in RenderTreeBuilder::List::updateItemMarker https://bugs.webkit.org/show_bug.cgi?id=310671

Unreviewed revert.

(309272@main and 309466@main)

* LayoutTests/fast/lists/list-marker-before-content-table-expected.txt:
* LayoutTests/fast/lists/list-marker-outside-flex-collapse-anonymous-block-expected.html: Removed.
* LayoutTests/fast/lists/list-marker-outside-flex-collapse-anonymous-block.html: Removed.
* LayoutTests/platform/glib/fast/css-generated-content/table-row-group-with-before-expected.txt:
* LayoutTests/platform/glib/fast/css-generated-content/table-row-with-before-expected.txt:
* LayoutTests/platform/glib/fast/css-generated-content/table-with-before-expected.txt:
* LayoutTests/platform/glib/fast/forms/form-hides-table-expected.txt:
* LayoutTests/platform/glib/fast/lists/ordered-list-with-no-ol-tag-expected.txt:
* LayoutTests/platform/ios/fast/css-generated-content/table-row-group-with-before-expected.txt:
* LayoutTests/platform/ios/fast/css-generated-content/table-row-with-before-expected.txt:
* LayoutTests/platform/ios/fast/css-generated-content/table-with-before-expected.txt:
* LayoutTests/platform/ios/fast/forms/form-hides-table-expected.txt:
* LayoutTests/platform/ios/fast/lists/ordered-list-with-no-ol-tag-expected.txt:
* LayoutTests/platform/mac/fast/css-generated-content/table-row-group-with-before-expected.txt:
* LayoutTests/platform/mac/fast/css-generated-content/table-row-with-before-expected.txt:
* LayoutTests/platform/mac/fast/css-generated-content/table-with-before-expected.txt:
* LayoutTests/platform/mac/fast/forms/form-hides-table-expected.txt:
* LayoutTests/platform/mac/fast/lists/ordered-list-with-no-ol-tag-expected.txt:
* Source/WebCore/layout/formattingContexts/inline/InlineQuirks.cpp:
(WebCore::Layout::InlineQuirks::shouldCollapseLineBoxHeight const):
* Source/WebCore/layout/integration/LayoutIntegrationBoxTreeUpdater.cpp:
(WebCore::LayoutIntegration::BoxTreeUpdater::createLayoutBox):
(WebCore::LayoutIntegration::updateListMarkerAttributes):
* Source/WebCore/layout/layouttree/LayoutElementBox.h:
(WebCore::Layout::ElementBox::isListMarkerOutside const):
(WebCore::Layout::ElementBox::shouldCollapseAnonymousBlockParentForListMarker const): Deleted.
* Source/WebCore/rendering/RenderListMarker.h:
* Source/WebCore/rendering/updating/RenderTreeBuilderList.cpp:
(WebCore::parentCandidateForMarker):
(WebCore::RenderTreeBuilder::List::updateItemMarker):
(WebCore::findParentOfEmptyOrFirstLineBox): Deleted.

Canonical link: https://commits.webkit.org/309904@main