Source/WebCore/rendering/RenderListMarker.h
@@ -76,17 +76,6 @@ public:
 
     std::pair<float, float> layoutBounds() const { return m_layoutBounds; }
 
-    bool shouldCollapseAnonymousBlockParent() const { return m_shouldCollapseAnonymousBlockParent; }
-    void setShouldCollapseAnonymousBlockParent(bool value)
-    {
-        if (value) {
-            ASSERT(parent());
-            ASSERT(parent()->isAnonymousBlock());
-            ASSERT(!isInside());
-        }
-        m_shouldCollapseAnonymousBlockParent = value;
-    }
-
 private:
     void willBeDestroyed() final;
     ASCIILiteral renderName() const final { return "RenderListMarker"_s; }
@@ -123,7 +112,6 @@ private:
     LayoutUnit m_lineOffsetForListItem;
     LayoutUnit m_lineLogicalOffsetForListItem;
     std::pair<float, float> m_layoutBounds;
-    bool m_shouldCollapseAnonymousBlockParent { false };
 };
 
 } // namespace WebCore
